<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="app_name">半价特卖</string>
    <string name="button10">10元</string>
    <string name="button20">20元</string>
    <string name="button30">30元</string>
    <string name="pull_to_refresh_pull_success" />
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_footer_release_label">松开加载</string>
    <string name="pull_to_refresh_footer_pull_label">加载更多</string>
    <string name="pull_to_refresh_footer_pull_label_nodata">已经到底了哦~</string>
    <string name="pull_to_refresh_footer_refreshing_label">努力加载中…</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">输入搜索内容！</string>
    <string name="settings_description">搜索描述</string>
    <string name="back">返回</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="catetitle">首页</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_cs">CsActivity</string>
    <string name="all">全部</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="content_description">内容描述</string>
    <string name="error_network">无法连接服务器，请检查网络设置或稍后再试</string>
    <string name="error_exception">发生未知错误</string>
    <string name="error_create_file_fail">创建文件失败，请检查SD卡空间是否足够</string>
    <string name="logint">登录</string>
    <string name="logint_hint">半价特卖账号登录</string>
    <string name="logint_now_login">立即登录</string>
    <string name="login_input_phone">输入手机号</string>
    <string name="logint_input_password">输入密码</string>
    <string name="logint_forgot_password">忘记密码？</string>
    <string name="logint_error_password">密码错误</string>
    <string name="register">注册</string>
    <string name="default_order">默认</string>
    <string name="register_hint">半价特卖账号注册</string>
    <string name="register_input_phone">请输入手机号</string>
    <string name="register_check_phone">手机号格式错误（为11位数字）</string>
    <string name="register_input_captcha">请输入验证码</string>
    <string name="register_check_captcha">验证码格式错误（为5位数字）</string>
    <string name="register_get_captcha">获取验证码</string>
    <string name="register_input_password">设置密码（6–20位字符）</string>
    <string name="register_input_recommend">推荐人手机号（选填）</string>
    <string name="register_check_recommend">推荐人手机号格式错误（为11位数字）</string>
    <string name="register_check_password">密码格式错误，6–24位字符，不能含空格</string>
    <string name="register_now_register">立即注册</string>
    <string name="register_send_captcha_hint">验证码已发送，请注意查收，如未收到，30秒后可重新获取</string>
    <string name="register_second">%1$s秒</string>
    <string name="forgot">找回密码</string>
    <string name="forgot_hint">半价特卖找回密码</string>
    <string name="submit">提交</string>
    <string name="update_password">修改密码</string>
    <string name="update_password_input_original_pwd">现在的密码</string>
    <string name="update_password_check_original_pwd">现在的密码格式错误，6–24位字符，不能含空格</string>
    <string name="update_password_input_new_pwd">新的密码</string>
    <string name="update_password_check_new_pwd">新的密码格式错误，6–24位字符，不能含空格</string>
    <string name="update_password_input_affirm">确认新的密码</string>
    <string name="update_password_check_affirm_pwd">两次输入的密码不一致</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="user_info">个人信息</string>
    <string name="headportrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone">手机号</string>
    <string name="shipping_address">收货地址</string>
    <string name="not_write">未填写</string>
    <string name="logout_account">退出当前账号</string>
    <string name="logout_account_hint">确定退出当前登录？</string>
    <string name="logout_account_success">已退出当前登录</string>
    <string name="update_nickname">修改昵称</string>
    <string name="update_nickname_input">请输入昵称</string>
    <string name="update_nickname_success">修改昵称成功</string>
    <string name="camera">拍照</string>
    <string name="select_local_pick">选择本地图片</string>
    <string name="filtrate">筛选</string>
    <string name="affirm">确定</string>
    <string name="brandsell">品牌特卖</string>
    <string name="search_by_category">分类搜索</string>
    <string name="mine">我的</string>
    <string name="check_in">签到领积分</string>
    <string name="check_in_score">积分：</string>
    <string name="check_in_date_format">%1$s年%2$s月%3$s日</string>
    <string name="check_in_current_score"><Data>&lt;font color=#fd4f60>%1$s&lt;/font></Data></string>
    <string name="check_in_hints_not">今日还没有签到哦！</string>
    <string name="check_in_hints_yes">今日已签到，明日签到+%1$s</string>
    <string name="check_in_me">我要签到</string>
    <string name="check_in_success">签到成功</string>
    <string name="score_charges">[马上抵话费]</string>
    <string name="check_in_explain">签到规则</string>
    <string name="check_in_explain_title">签到规则</string>
    <string name="check_in_explain_content">"1. 签到1天，送1积分；2. 连续签到2天，送2积分；3. 连续签到3天及以上送3积分；4. 每周五签到可获得5倍积分；
5. 获得的积分可在“我的积分”中查看；
6. 如连续签到中断则重新开始。"</string>
    <string name="my_score">我的积分</string>
    <string name="my_score_not_data">暂无积分数据</string>
    <string name="score_store">积分商城</string>
    <string name="exchange_charges">兑换话费</string>
    <string name="exchange_hints">支持移动、联通、电信的手机号码</string>
    <string name="exchange_phone">手机号码</string>
    <string name="exchange_please_phone">请输入手机号</string>
    <string name="exchange_recharge_amount">充值金额</string>
    <string name="exchange_money">%1$s元</string>
    <string name="exchange_affirm">确认兑换</string>
    <string name="exchange_success">兑换成功</string>
    <string name="exchange_success_hints">工作人员会在审核后3个工作日内发出礼品，请您耐心等候。</string>
    <string name="exchange_fail">兑换失败</string>
    <string name="exchange_fail_overdue">礼品已过期或不存在</string>
    <string name="exchange_fail_late">晚来一步，礼品已经兑换完了</string>
    <string name="exchange_get_score">赚积分</string>
    <string name="my_gift">我的礼品</string>
    <string name="my_recommenduser">推荐好友送积分</string>
    <string name="score_explain">积分说明</string>
    <string name="mall_score">%1$s积分</string>
    <string name="mall_price">原价￥%1$s</string>
    <string name="mall_remainder">剩余%1$s件</string>
    <string name="shipping_address_add">新增收货地址</string>
    <string name="shipping_address_add_success">新增收货地址成功</string>
    <string name="shipping_address_edit_success">修改收货地址成功</string>
    <string name="shipping_address_delete_success">删除收货地址成功</string>
    <string name="shipping_address_require">必填</string>
    <string name="shipping_address_name">收货人姓名</string>
    <string name="shipping_address_name_check">收货人姓名不能为空</string>
    <string name="shipping_address_phone_check">手机号码不能为空</string>
    <string name="shipping_address_address">详细地址</string>
    <string name="shipping_address_address_check">详细地址不能为空</string>
    <string name="shipping_address_postcode">邮政编码</string>
    <string name="shipping_address_postcode_check">邮政编码不能为空</string>
    <string name="shipping_address_postcode_check2">邮政编码格式错误（为6位数字）</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="week_sunday">日</string>
    <string name="week_monday">一</string>
    <string name="week_tuesday">二</string>
    <string name="week_wednesday">三</string>
    <string name="week_thursday">四</string>
    <string name="week_friday">五</string>
    <string name="week_saturday">六</string>
    <string name="title_check_new_version">检测新版本</string>
    <string name="content_new_version">检测到新版本可更新,是否下载更新?</string>
    <string name="repeat_exit_tip">再按一次在后台运行</string>
    <string name="NotifyOK">"确定"</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="latest">最新</string>
    <string name="favor">收藏</string>
    <string name="NotifyCancel">"取消"</string>
    <string name="tip_apk_download">AppUpgradeDemo.apk 正在下载...</string>
    <string name="download_begin">开始下载</string>
    <string name="about_banjia">  全网超值正品特卖，真正值得买的1-5折畅销商品。来自天猫、亚马逊、京东、一号店、当当，最新上线的特卖商品。通过商品包；爆料、 商品比价、商品搜索，全网正品最低价一网打尽！服饰、数码家电、鞋包、美妆个护、居家、母婴等，应有尽有。半价特卖，让你总是抢先买到超值正品! 多块好省！数千万购物达人们的必备应用</string>
    <string name="female_cloth">女装</string>
    <array name="all_category">
        <item>全部</item>
        <item>女装</item>
        <item>男装</item>
        <item>居家</item>
        <item>套装</item>
        <item>男装</item>
        <item>居家</item>
        <item>母婴</item>
        <item>鞋包</item>
        <item>配饰</item>
        <item>美食</item>
        <item>数码家电</item>
        <item>美妆个护</item>
        <item>文体</item>
        <item>中老年</item>
    </array>

    <array name="sub_female_cloth">
        <item>全部女装</item>
        <item>上衣</item>
        <item>裤裙</item>
        <item>内衣</item>
        <item>套装</item>
    </array>

    <array name="category_search">
        <item>女装</item>
        <item>男装</item>
        <item>居家</item>
        <item>母婴</item>
        <item>鞋包</item>
        <item>内衣</item>
        <item>美食</item>
        <item>数码家电</item>
        <item>配饰</item>
        <item>美妆个护</item>
        <item>文体</item>
        <item>中老年</item>
    </array>
</resources>
