<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_category_show_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="鞋包"
            android:drawableRight="@mipmap/ic_category_title_down"
            android:background="#00000000"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_category_show_filtrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:textColor="@color/white"
            android:text="@string/filtrate" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_category_show"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <RadioButton
            android:id="@+id/rb_category_show_default"
            android:text="@string/default_order"
            style="@style/btn_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:layout_height="match_parent" />
        <RadioButton
            android:id="@+id/rb_category_show_sales_volume"
            android:text="@string/sales_volume"
            style="@style/btn_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/rb_category_show_price"
            android:text="@string/price"
            style="@style/btn_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/rb_category_show_latest"
            android:text="@string/latest"
            style="@style/btn_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </RadioGroup>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_category_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
</LinearLayout>
